@@ -4862,7 +4862,7 @@ upon interesting bugs and weird results.</property>
     <property name="upper">2000</property>
     <property name="step_increment">1</property>
   </object>
-  <object class="GtkAction" id="LoadModel">
+  <object class="GtkAction" id="OpenModel">
     <property name="label">_Open Model</property>
     <property name="tooltip">Opens a model file.</property>
     <property name="stock_id">gtk-open</property>
@@ -6575,5 +6575,10 @@ Any selected group of dimensions will be scaled accordingly.</property>
   <object class="GtkAdjustment" id="GCodeCornerStyleCAMToleranceValue">
     <property name="upper">100</property>
     <property name="step_increment">1</property>
+  </object>
+  <object class="GtkAction" id="OpenRecentModel">
+    <property name="label">Open _Recent Model</property>
+    <property name="stock_id">gtk-open</property>
+    <property name="always_show_image">True</property>
   </object>
 </interface>
